--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -48,3 +48,15 @@
   }
 
 }
+
+
+
+@media screen and (max-width: 448px) {
+  .homeBlock {
+    height: 83.5vh;
+    // height: 80%;
+    .title {
+      height: 80%;
+    }
+  }
+}
