--- a/src/components/SearchAddresses/SearchAddresses.module.scss
+++ b/src/components/SearchAddresses/SearchAddresses.module.scss
@@ -129,10 +129,10 @@
   }
 }
 
-
 @media screen and (max-width: 768px) {
   .adressBlock {
     height: 1028px;
+
     .searchBlock {
       input {
         width: 617px;
@@ -144,9 +144,11 @@
 @media screen and (max-width: 448px) {
   .adressBlock {
     width: 100%;
-    height: 1390px;
+    // height: 90%;
+    height: 84.4vh;
 
     .searchBlock {
+
       input {
         width: 100%;
       }
@@ -156,6 +158,14 @@
         height: 56px;
         padding: 9px;
         padding-left: 54px;
+
+      }
+    }
+
+    .foundBlock {
+      .foundItems {
+        overflow-y: auto;
+        height: 44vh;
       }
     }
   }
